# LedgeRPG

./: .gitignore  LedgeRPG.slnx  README.md
LedgeRPG/: depfile.yaml
LedgeRPG.Adapter/: LedgeRPGGameModule.cs  LedgeRPGRulesAdapter.cs  RPGAction.cs  RPGState.cs
LedgeRPG.Adapter.Tests/: AdapterTests.cs  GameModuleTests.cs
LedgeRPG.Core/: InvalidActionException.cs
LedgeRPG.Core.Tests/: ActionTests.cs  DeterminismTests.cs  TerminationTests.cs
LedgeRPG.Core/Determinism/: Actions.cs  Directions.cs  SplitMix64Rng.cs
LedgeRPG.Core/World/: HexCoord.cs  StateDelta.cs  TerminalReason.cs  TileType.cs  World.cs
LedgeRPG.Lattice/: LatticeAction.cs  LatticeDelta.cs  LatticeProjections.cs  LatticeSlice111.cs  LatticeWorld.cs  ScaledLattice.cs  ToctaAggregate.cs  ToctaCoord.cs  ToctaMeshData.cs
LedgeRPG.Lattice.Tests/: LatticeActionTests.cs  LatticeProjectionsTests.cs  LatticeSlice111Tests.cs  LatticeWorldMovementTests.cs  LatticeWorldTests.cs  ScaledLatticeMovementTests.cs  ScaledLatticeTests.cs  ToctaCoordTests.cs  ToctaMeshDataTests.cs
LedgeRPG.Scaled/: ActionRefinement.cs  Cells.cs  Coords.cs  Projections.cs  Scale1Action.cs  ScaleLevel.cs  ScaledWorld.cs
LedgeRPG.Scaled.Tests/: ActionRefinementTests.cs  ProjectionTests.cs  ScaledWorldTests.cs
LedgeRPG/ProjectSettings/: EditorBuildSettings.asset  PackageManagerSettings.asset  ProjectSettings.asset
server/: pyproject.toml
server/ledgerpg/: __init__.py  determinism.py  server.py  trace.py  world.py
server/scripts/: reference_client.py
server/tests/: test_actions.py  test_determinism.py  test_termination.py
(+25 files in other folders)
